# cppformlang

./: .clang-format  .gitignore  CMakeLists.txt  README.md  _r_e_a_d_m_e_8md.html  about.html  about_8dox.html  annotated.html  classcppformlang_1_1finite__automata_1_1_finite_automaton.html  classcppformlang_1_1finite__automata_1_1_nondeterministic_finite_automaton.html  classcppformlang_1_1finite__automata_1_1_nondeterministic_transitions.html  classcppformlang_1_1finite__automata_1_1_recursive_automaton.html  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_2fd8f2da53a34d23ddd601b4775c1f07.html  dir_31a378c84b956866319ca9d9294f1959.html  dir_821002d4f10779a80d4fb17bc32f21f1.html  dir_bd81da13c788c24df4b0c8c733234fbf.html  files.html  finite__automata_8h.html  finite__automation_8h.html  hash_8h.html  index.html  modules.html  namespacecppformlang.html  namespacecppformlang_1_1finite__automata.html  namespaces.html  namespaceutils.html  nondeterministic__finite__automaton_8h.html  nondeterministic__transitions_8h.html  pages.html  recursive__automation_8h.html  searchdata-v1.js
.github/workflows/: documentation.yaml  install.yml  macos.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
cmake/: CPM.cmake  tools.cmake
documentation/: CMakeLists.txt
include/cppformlang/: greeter.h
include/cppformlang/finite_automata/: finite_automata.h  finite_automation.h  nondeterministic_finite_automaton.h  nondeterministic_transition_function.h  nondeterministic_transitions.h  recursive_automation.h
include/utils/: hash.h
source/: greeter.cpp
source/cppformlang/finite_automata/: finite_automation.cpp  nondeterministic_finite_automaton.cpp  nondeterministic_transition_function.cpp  nondeterministic_transitions.cpp  recursive_automation.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: greeter.cpp
test/source/cppformlang/finite_automata/: nondeterministic_finite_automaton.cpp  recursive_automation.cpp  regexable.cpp  transition_function.cpp
